refactor: notify to notification
