# notification/internal/server/notificationserver.go
@@ -1,0 +1,33 @@
+// Code generated by goctl. DO NOT EDIT.
+// Source: notification.proto
+
+package server
+
+import (
+	"context"
+
+	"pallink/notification/internal/logic"
+	"pallink/notification/internal/svc"
+	"pallink/notification/notification"
+)
+
+type NotificationServer struct {
+	svcCtx *svc.ServiceContext
+	notification.UnimplementedNotificationServer
+}
+
+func NewNotificationServer(svcCtx *svc.ServiceContext) *NotificationServer {
+	return &NotificationServer{
+		svcCtx: svcCtx,
+	}
+}
+
+func (s *NotificationServer) GetNotifications(ctx context.Context, in *notification.GetNotificationsRequest) (*notification.GetNotificationsResponse, error) {
+	l := logic.NewGetNotificationsLogic(ctx, s.svcCtx)
+	return l.GetNotifications(in)
+}
+
+func (s *NotificationServer) MarkRead(ctx context.Context, in *notification.MarkReadRequest) (*notification.MarkReadResponse, error) {
+	l := logic.NewMarkReadLogic(ctx, s.svcCtx)
+	return l.MarkRead(in)
+}
